# sona-lab

./: .envrc  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: linter.yaml
docs/: bare_cloud_setup.md  bootstrap_cloud.sh  cloud_instance_setup_ubuntu22.md  cpu_to_cloud_runbook.md
example/configs/: sft.json  sft_smoke.json
setup/: setup_python.sh
tools/data/: build_manifests.py  download_small_datasets.py  merge_manifests.py
tools/serving/: run_smoke_tests.sh  sample_inference.py
tts/core/: lora.py  modeling.py
tts/data/: data_utils.py
tts/training/: environment.py  training_loop.py
tts/training/codec/: gan_training_loop.py
tts/training/rlhf/: rlhf_main.py
